[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "deadbolt"
version = "0.1.0"
description = "PostgreSQL advisory lock context manager"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Database",
]
keywords = ["postgres", "postgresql", "advisory-lock", "lock"]

[dependency-groups]
dev = ["ruff", "ty", "pytest", "testcontainers[postgres]"]

[tool.pytest.ini_options]
markers = ["integration: marks tests as integration tests"]
filterwarnings = ["ignore::DeprecationWarning:testcontainers.*"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "deadbolt._deadbolt"

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
]
